This is how it works section

--- a/index.html
+++ b/index.html
@@ -21,21 +21,66 @@
     <p>Home Delivery From<br />Your Local Farms</p>
   </section>
 
+  <section class="how-it-works">
+    <div class="hiw-left">
+      <h2>THIS IS HOW IT<br>WORKS</h2>
+    </div>
+
+    <div class="hiw-right">
+      <div class="hiw-step">
+        <div class="hiw-step-inner">
+          <h3>ORDER GROCERIES</h3>
+          <p>
+            Fram is a circular service that ensures your kitchen is always stocked with the essentials you need. Browse our seasonal selection, choose your items, and place your order online.
+            <br><br>
+            <a href="#">See our stock here</a>
+          </p>
+        </div>
+      </div>
+
+      <div class="hiw-step">
+        <div class="hiw-step-inner">
+          <h3>STOCK UP</h3>
+          <p>
+            Once your order arrives, unpack the produce and store it however it works best for you. Hold onto the containers—they’re yours to keep until your next order.
+          </p>
+        </div>
+      </div>
+
+      <div class="hiw-step">
+        <div class="hiw-step-inner">
+          <h3>SCAN & REORDER</h3>
+          <p>
+            Ready for a refill? Grab the containers from your last order and scan the QR code with our app or your phone’s camera. This instantly adds the items back to your cart, making reordering a breeze.
+          </p>
+        </div>
+      </div>
+
+      <div class="hiw-step last">
+        <div class="hiw-step-inner">
+          <h3>SWAP & REUSE</h3>
+          <p>
+            When we deliver your new order, simply leave your empty containers outside. We’ll pick them up, clean them thoroughly, and reuse them for future deliveries.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <aside id="sideMenu" class="side-menu">
     <div class="menu-header">
       <button id="closeMenu" class="icon-btn close-btn">&times;</button>
       <span class="menu-title">FRAM</span>
     </div>
     <div class="menu-line"></div>
-
     <nav class="menu-links">
       <a href="#">PRODUCTS</a>
       <a href="#">CHAT</a>
     </nav>
-
     <a href="#" class="checkout-link">CHECKOUT</a>
   </aside>
 
   <script src="/scripts/main.js"></script>
 </body>
 </html>
+
