--- a/index.html
+++ b/index.html
@@ -1,86 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FRAM</title>
-  <link rel="stylesheet" href="/css/style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400&family=Frank+Ruhl+Libre:wght@300&display=swap" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>FRAM</title>
+    <link rel="stylesheet" href="/css/style.css" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;600&family=Frank+Ruhl+Libre:wght@300;500;600&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
-  <header class="navbar">
-    <button id="openMenu" class="icon-btn">&#9776;</button>
-    <span class="logo">FRAM</span>
-    <span class="cart">0</span>
-  </header>
+    <header class="navbar">
+        <button id="openMenu" class="icon-btn">&#9776;</button>
+        <span class="logo">FRAM</span>
+        <span class="cart">0</span>
+    </header>
 
-  <section class="hero">
-    <h1>FRAM</h1>
-    <hr />
-    <p>Home Delivery From<br />Your Local Farms</p>
-  </section>
+    <section class="hero">
+        <h1>FRAM</h1>
+        <hr />
+        <p>Home Delivery From<br />Your Local Farms</p>
+    </section>
 
-  <section class="how-it-works">
-    <div class="hiw-left">
-      <h2>THIS IS HOW IT<br>WORKS</h2>
-    </div>
-
-    <div class="hiw-right">
-      <div class="hiw-step">
-        <div class="hiw-step-inner">
-          <h3>ORDER GROCERIES</h3>
-          <p>
-            Fram is a circular service that ensures your kitchen is always stocked with the essentials you need. Browse our seasonal selection, choose your items, and place your order online.
-            <br><br>
-            <a href="#">See our stock here</a>
-          </p>
+    <section class="intro-section">
+        <div class="intro-card">
+            <h2>SHOP OUR SEASONAL<br>SELECTION</h2>
+            <p class="subtext">Updated every week</p>
+            <img src="/images/Landing Page/nina-luong-dp06f70Eyvc-unsplash.jpg" alt="Seasonal Produce" />
+            <p>New produce is added continuously as time goes by and the seasons change.</p>
+            <a href="products.html" class="btn-primary">Browse our selection</a>
         </div>
-      </div>
 
-      <div class="hiw-step">
-        <div class="hiw-step-inner">
-          <h3>STOCK UP</h3>
-          <p>
-            Once your order arrives, unpack the produce and store it however it works best for you. Hold onto the containers—they’re yours to keep until your next order.
-          </p>
+        <div class="intro-card">
+            <h2>ASK US ABOUT<br>ANYTHING</h2>
+            <p class="subtext">All your questions answered</p>
+            <img src="/images/Landing Page/rebecca-ritchie-NWrp3FK68yE-unsplash.jpg" alt="Ask Us" />
+            <p>We're here to help you with anything related to your order, delivery, or the service in general.</p>
+            <a href="contact.html" class="btn-primary">Go to chat</a>
         </div>
-      </div>
-
-      <div class="hiw-step">
-        <div class="hiw-step-inner">
-          <h3>SCAN & REORDER</h3>
-          <p>
-            Ready for a refill? Grab the containers from your last order and scan the QR code with our app or your phone’s camera. This instantly adds the items back to your cart, making reordering a breeze.
-          </p>
+    </section>
+    <section class="how-it-works">
+        <div class="hiw-left">
+            <h2>THIS IS HOW IT<br>WORKS</h2>
         </div>
-      </div>
 
-      <div class="hiw-step last">
-        <div class="hiw-step-inner">
-          <h3>SWAP & REUSE</h3>
-          <p>
-            When we deliver your new order, simply leave your empty containers outside. We’ll pick them up, clean them thoroughly, and reuse them for future deliveries.
-          </p>
+        <div class="hiw-right">
+            <div class="hiw-step">
+                <div class="hiw-step-inner">
+                    <h3>ORDER GROCERIES</h3>
+                    <p>
+                        Fram is a circular service that ensures your kitchen is always stocked with the essentials you
+                        need. Browse our seasonal selection, choose your items, and place your order online.
+                        <br><br>
+                        <a href="/products.html">See our stock here</a>
+                    </p>
+                </div>
+            </div>
+
+            <div class="hiw-step">
+                <div class="hiw-step-inner">
+                    <h3>STOCK UP</h3>
+                    <p>
+                        Once your order arrives, unpack the produce and store it however it works best for you. Hold
+                        onto the containers—they’re yours to keep until your next order.
+                    </p>
+                </div>
+            </div>
+
+            <div class="hiw-step">
+                <div class="hiw-step-inner">
+                    <h3>SCAN & REORDER</h3>
+                    <p>
+                        Ready for a refill? Grab the containers from your last order and scan the QR code with our app
+                        or your phone’s camera. This instantly adds the items back to your cart, making reordering a
+                        breeze.
+                    </p>
+                </div>
+            </div>
+
+            <div class="hiw-step last">
+                <div class="hiw-step-inner">
+                    <h3>SWAP & REUSE</h3>
+                    <p>
+                        When we deliver your new order, simply leave your empty containers outside. We’ll pick them up,
+                        clean them thoroughly, and reuse them for future deliveries.
+                    </p>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <aside id="sideMenu" class="side-menu">
-    <div class="menu-header">
-      <button id="closeMenu" class="icon-btn close-btn">&times;</button>
-      <span class="menu-title">FRAM</span>
-    </div>
-    <div class="menu-line"></div>
-    <nav class="menu-links">
-      <a href="#">PRODUCTS</a>
-      <a href="#">CHAT</a>
-    </nav>
-    <a href="#" class="checkout-link">CHECKOUT</a>
-  </aside>
+    <aside id="sideMenu" class="side-menu">
+        <div class="menu-header">
+            <button id="closeMenu" class="icon-btn close-btn">&times;</button>
+            <span class="menu-title">FRAM</span>
+        </div>
+        <div class="menu-line"></div>
+        <nav class="menu-links">
+            <a href="#">PRODUCTS</a>
+            <a href="#">CHAT</a>
+        </nav>
+        <a href="#" class="checkout-link">CHECKOUT</a>
+    </aside>
 
-  <script src="/scripts/main.js"></script>
+    <script src="/scripts/main.js"></script>
 </body>
-</html>
 
+</html>
