Produce images + responsiveness

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
             <div class="product-card">
                 <div class="img-wrapper">
-                    <img src="https://www.svgrepo.com/show/508699/landscape-placeholder.svg" alt="Oats">
+                    <img src="/images/Product Page/lukasz-rawa-HB_MVtHVMLc-unsplash.jpg" alt="Oats">
                     <button class="add-btn">
                         <span class="btn-text">Add to basket</span>
                         <span class="btn-arrow">↑</span>
@@ -125,7 +125,7 @@
 
             <div class="product-card">
                 <div class="img-wrapper">
-                    <img src="https://www.svgrepo.com/show/508699/landscape-placeholder.svg" alt="Red Onions">
+                    <img src="/images/Product Page/goh-rhy-yan-CCxWLAx0qmk-unsplash.jpg" alt="Red Onions">
                     <button class="add-btn">
                         <span class="btn-text">Add to basket</span>
                         <span class="btn-arrow">↑</span>
@@ -140,7 +140,7 @@
 
             <div class="product-card">
                 <div class="img-wrapper">
-                    <img src="https://www.svgrepo.com/show/508699/landscape-placeholder.svg" alt="Garlic">
+                    <img src="/images/Product Page/matthew-pilachowski-w1eAFyBLhLM-unsplash.jpg" alt="Garlic">
                     <button class="add-btn">
                         <span class="btn-text">Add to basket</span>
                         <span class="btn-arrow">↑</span>
