product page + map.js

--- a/products.html
+++ b/products.html
@@ -1,32 +1,138 @@
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FRAM Products</title>
-  <link href="https://fonts.googleapis.com/css2?family=Arimo&family=Frank+Ruhl+Libre:wght@400;500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/chat.css" />
-  <link rel="stylesheet" href="/css/style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>FRAM Products</title>
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/pr-map.css">
 </head>
-    <header class="navbar">
-        <button id="openMenu" class="icon-btn">&#9776;</button>
-        <a href="/index.html" class="logo">FRAM</a>
-        <span class="cart">0</span>
-    </header>
-    <aside id="sideMenu" class="side-menu">
-        <div class="menu-header">
-            <button id="closeMenu" class="icon-btn close-btn">&times;</button>
-            <span class="menu-title">FRAM</span>
-        </div>
-        <div class="menu-line"></div>
-        <nav class="menu-links">
-            <a href="/products.html">PRODUCTS</a>
-            <a href="/contact.html">CHAT</a>
-        </nav>
-        <a href="#" class="checkout-link">CHECKOUT</a>
-    </aside>
+<header class="navbar">
+    <button id="openMenu" class="icon-btn">&#9776;</button>
+    <a href="/index.html" class="logo">FRAM</a>
+    <span class="cart">0</span>
+</header>
+<aside id="sideMenu" class="side-menu">
+    <div class="menu-header">
+        <button id="closeMenu" class="icon-btn close-btn">&times;</button>
+        <span class="menu-title">FRAM</span>
+    </div>
+    <div class="menu-line"></div>
+    <nav class="menu-links">
+        <a href="/products.html">PRODUCTS</a>
+        <a href="/contact.html">CHAT</a>
+    </nav>
+    <a href="#" class="checkout-link">CHECKOUT</a>
+</aside>
+
 <body>
+    <main>
+        <section class="pr-produce">
+            <div class="pr-container">
+                <h2 class="pr-left pr-pr-pr">produce</h2>
+                <div class="pr-text-wrapper">
+                    <p class="pr-pr-pr pr-left">Explore our selection of seasonal produce, sourced directly from local
+                        farms to ensure peak freshness and quality. Every item is chosen with care, supporting
+                        sustainable practices and bringing the best of the harvest to your table</p>
+                </div>
+            </div>
+        </section>
+        <div>
+            <div class="pr-container">
+                <div class="pr-product-container pr-product-container-wrap">
+                    <div class="pr-product-card">
+                        <div class="pr-relative">
+                            <img src="images\Product Page\lukasz-rawa-HB_MVtHVMLc-unsplash.jpg" alt="Oats"
+                                class="pr-product-image">
+                            <button class="pr-add-to-basket add-btn">
+                                <span class="btn-text">Add to basket</span>
+                                <span class="btn-arrow">↑</span>
+                            </button>
+                        </div>
+                        <div class="pr-product-name-price">
+                            <span class="pr-product-name">Oats</span>
+                            <span class="pr-product-price">48 kr / kg</span>
+                        </div>
+                        <div class="pr-product-weight">1 kg</div>
+                    </div>
 
-  <script src="/scripts/main.js"></script>
+                    <div class="pr-product-card">
+                        <div class="pr-relative">
+                            <img src="images\Product Page\goh-rhy-yan-CCxWLAx0qmk-unsplash.jpg" alt="Red Onions"
+                                class="pr-product-image">
+                            <button class="pr-add-to-basket add-btn">
+                                <span class="btn-text">Add to basket</span>
+                                <span class="btn-arrow">↑</span>
+                            </button>
+                        </div>
+                        <div class="pr-product-name-price">
+                            <span class="pr-product-name">Red Onions</span>
+                            <span class="pr-product-price">48 kr / kg</span>
+                        </div>
+                        <div class="pr-product-weight">0.5 kg</div>
+                    </div>
+                    <div class="pr-product-card">
+                        <div class="pr-relative">
+                            <img src="images\Product Page\matthew-pilachowski-w1eAFyBLhLM-unsplash.jpg" alt="Garlic"
+                                class="pr-product-image">
+                            <button class="pr-add-to-basket add-btn">
+                                <span class="btn-text">Add to basket</span>
+                                <span class="btn-arrow">↑</span>
+                            </button>
+                        </div>
+                        <div class="pr-product-name-price">
+                            <span class="pr-product-name">Garlic</span>
+                            <span class="pr-product-price">48 kr / kg</span>
+                        </div>
+                        <div class="pr-product-weight">0,2 kg</div>
+                    </div>
+                    <div class="pr-product-card">
+                        <div class="pr-relative">
+                            <img src="images\Product Page\rodrigo-dos-reis-h3AkzboxK4Q-unsplash.jpg" alt="Potato"
+                                class="pr-product-image">
+                            <button class="pr-add-to-basket add-btn">
+                                <span class="btn-text">Add to basket</span>
+                                <span class="btn-arrow">↑</span>
+                            </button>
+                        </div>
+                        <div class="pr-product-name-price">
+                            <span class="pr-product-name">Potato</span>
+                            <span class="pr-product-price">32 kr / kg</span>
+                        </div>
+                        <div class="pr-product-weight">1 kg</div>
+                    </div>
+                    <div class="pr-product-card">
+                        <div class="pr-relative">
+                            <img src="images\Product Page\goh-rhy-yan-wUBhu3GXIg0-unsplash.jpg" alt="Carrots"
+                                class="pr-product-image">
+                            <button class="pr-add-to-basket add-btn">
+                                <span class="btn-text">Add to basket</span>
+                                <span class="btn-arrow">↑</span>
+                            </button>
+                        </div>
+                        <div class="pr-product-name-price">
+                            <span class="pr-product-name">Carrots</span>
+                            <span class="pr-product-price">48 kr / kg</span>
+                        </div>
+                        <div class="pr-product-weight">1 kg</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <section class="pr-how-it-works">
+            <div class="pr-how-it-works-left">
+                <h2 class="pr-pr-pr">See our <br>partnering farms</h2>
+            </div>
+            <div class="pr-how-it-works-right-map">
+                <div id="map" style="width: 100%; height: 400px;"></div>
+            </div>
+        </section>
+    </main>
 
+
+
+    <script type="module" src="/scripts/map.js"></script>
+    <script src="/scripts/main.js"></script>
 </body>
+
 </html>
