--- a/products.html
+++ b/products.html
@@ -42,7 +42,7 @@
                 <div class="pr-product-container pr-product-container-wrap">
                     <div class="pr-product-card">
                         <div class="pr-relative">
-                            <img src="images\Product Page\lukasz-rawa-HB_MVtHVMLc-unsplash.jpg" alt="Oats"
+                            <img src="/images/Product Page/lukasz-rawa-HB_MVtHVMLc-unsplash.jpg" alt="Oats"
                                 class="pr-product-image">
                             <button class="pr-add-to-basket add-btn">
                                 <span class="btn-text">Add to basket</span>
@@ -58,7 +58,7 @@
 
                     <div class="pr-product-card">
                         <div class="pr-relative">
-                            <img src="images\Product Page\goh-rhy-yan-CCxWLAx0qmk-unsplash.jpg" alt="Red Onions"
+                            <img src="/images/Product Page/goh-rhy-yan-CCxWLAx0qmk-unsplash.jpg" alt="Red Onions"
                                 class="pr-product-image">
                             <button class="pr-add-to-basket add-btn">
                                 <span class="btn-text">Add to basket</span>
@@ -73,7 +73,7 @@
                     </div>
                     <div class="pr-product-card">
                         <div class="pr-relative">
-                            <img src="images\Product Page\matthew-pilachowski-w1eAFyBLhLM-unsplash.jpg" alt="Garlic"
+                            <img src="/images/Product Page/matthew-pilachowski-w1eAFyBLhLM-unsplash.jpg" alt="Garlic"
                                 class="pr-product-image">
                             <button class="pr-add-to-basket add-btn">
                                 <span class="btn-text">Add to basket</span>
@@ -88,7 +88,7 @@
                     </div>
                     <div class="pr-product-card">
                         <div class="pr-relative">
-                            <img src="images\Product Page\rodrigo-dos-reis-h3AkzboxK4Q-unsplash.jpg" alt="Potato"
+                            <img src="/images/Product Page/rodrigo-dos-reis-h3AkzboxK4Q-unsplash.jpg" alt="Potato"
                                 class="pr-product-image">
                             <button class="pr-add-to-basket add-btn">
                                 <span class="btn-text">Add to basket</span>
@@ -103,7 +103,7 @@
                     </div>
                     <div class="pr-product-card">
                         <div class="pr-relative">
-                            <img src="images\Product Page\goh-rhy-yan-wUBhu3GXIg0-unsplash.jpg" alt="Carrots"
+                            <img src="/images/Product Page/goh-rhy-yan-wUBhu3GXIg0-unsplash.jpg" alt="Carrots"
                                 class="pr-product-image">
                             <button class="pr-add-to-basket add-btn">
                                 <span class="btn-text">Add to basket</span>
